Fix ugly div wrapping

--- a/VideoSummary/public/stylesheets/video.css
+++ b/VideoSummary/public/stylesheets/video.css
@@ -103,6 +103,10 @@ body {
     display: inline-block;
 }
 
+#player-div {
+    white-space: nowrap;
+}
+
 .bar rect {
     fill: steelblue;
     shape-rendering: crispEdges;
